# AMICAL

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  example.py  example_NIRISS.py  example_SPHERE.py  example_analysis.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/: dependabot.yml
.github/workflows/: bleeding-edge.yaml  cd.yml  ci.yml  codecov.yml  type-checking.yaml
Saveoifits/: example_fakebinary_NIRISS.oifits  fakebinary_NIRISS_g7_F430M_58886_1.oifits
Simulated_NRMdata/: c_binary_120mas_dm=5.0_mag=5.0_posang=45.0__F430M_81_flat_x11__00.fits  c_binary_143mas_dm=0.0_mag=4.0__F430M_81_flat_x11__00.fits  t_binary_120mas_dm=5.0_mag=5.0_posang=45.0__F430M_81_flat_x11__00.fits
amical/: ._data_processing.py  ._tools.py  __init__.py  _rich_display.py  calibration.py  core.py  dataProcessing.py  data_processing.py  dpfit.py  getInfosObs.py  get_infos_obs.py  ifu.py  oifits.py  tools.py
amical/_cli/: api.py  main.py
amical/_cli/commands/: calibrate.py  clean.py  extract.py
amical/a_vampire/: ._Vampires_test.py  ._diff_cal_AMICAL_VAMPIRES.py  README.md  Vampires_test.py  diff_cal_AMICAL_VAMPIRES.py  diff_cal_tools.py  test_file
amical/analysis/: candid.py  easy_candid.py  easy_pymask.py  fitting.py  models.py
amical/analysis/pymask/: __init__.py  cp_tools.py  cpo.py  oifits.py  oitools.py  pol_tools.py  x_y_plot.py
amical/internal_data/: ifs_wave_YJH.fits
amical/mf_pipeline/: ._ami_function.py  ._bispect.py  ami_function.py  bispect.py  bispect_old.py  bispect_v2.py  idl_function.py
amical/tests/: conftest.py  test_analysis.py  test_cli.py  test_extraction.py  test_io.py  test_load.py  test_processing.py  test_rich_display.py  test_tools.py
amical/tests/data/: hdr_niriss_mirage.fits  test.oifits
doc/: example_IFS.py  example_NIRISS.py  example_SPHERE.py  example_analysis.py  tutorial.md
docs/: example_SPHERE.py  index.md  tutorial.md
docs/notebooks/: example_NIRISS.ipynb  example_analysis.ipynb
example_SPHERE/: index.html
miamis/: __init__.py  core.py  dataProcessing.py  dpfit.py  getInfosObs.py  oifits.py  old_core.py  tools.py
miamis/analysis/: candid.py  easy_candid.py
miamis/mf_pipeline/: ami_function.py  bispect.py  idl_function.py
notebooks/example_NIRISS/: index.html
notebooks/example_SPHERE/: index.html
notebooks/example_analysis/: index.html
requirements/: typecheck.txt
search/: search_index.json
src/amical/: __init__.py  _rich_display.py  data_processing.py  ifu.py  tools.py
src/amical/_cli/: main.py
src/amical/_cli/commands/: calibrate.py
src/amical/analysis/: easy_candid.py  easy_pymask.py
src/amical/internal_data/: ifs_wave_YJ.fits
src/amical/mf_pipeline/: ami_function.py  bispect.py  idl_function.py
tests/: conftest.py  test_analysis.py  test_cli.py  test_extraction.py  test_io.py  test_processing.py  test_tools.py
tests/data/: hdr_niriss_amisim.fits  save_results_cp_example_fft.fits  save_results_cp_example_gauss.fits  save_results_v2_example_fft.fits  save_results_v2_example_gauss.fits  test.oifits  test_no_date_obs.oifits
tutorial/: index.html
