[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amical"
version = "1.6.0"
authors = [
    { name = "Anthony Soulain", email = "anthony.soulain@univ-grenoble-alpes.fr" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: AIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "astropy>=5.0.1",
    "astroquery>=0.4.4",
    "corner>=2.2.1",
    "emcee>=3.1.1",
    "h5py>=3.6.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.2",
    "pypdf>=3.2.0",
    "rich>=13.5.2",
    "scipy>=1.7.2",
    "uncertainties>=3.1.6",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/SydneyAstrophotonicInstrumentationLab/AMICAL"

[project.scripts]
amical = "amical._cli.main:main"

[dependency-groups]
typecheck = [
    "mypy>=1.14.1",
    "types-termcolor>=1.1.6.2",
]
test = [
    "pytest>=7.2.1",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "LICENSE",
    "README.md",
]

[tool.ruff.lint]
exclude = ["*__init__.py", "src/amical/externals/*"]
ignore = ["E501"]
select = [
    "E",
    "F",
    "W",
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "YTT", # flake8-2020
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "error",
    # we run tests against a non-GUI backend on purpose
    "ignore:Matplotlib is currently using agg, which is a non-GUI backend, so cannot show the figure.:UserWarning",
    "ignore:FigureCanvasAgg is non-interactive, and thus cannot be shown:UserWarning",
    # np.product is used in h5py up to version 3.8.0
    # https://github.com/h5py/h5py/pull/2242
    "ignore:`product` is deprecated as of NumPy 1.25.0, and will be removed in NumPy 2.0. Please use `prod` instead.:DeprecationWarning",

    'ignore:datetime\.datetime\.utcfromtimestamp\(\) is deprecated:DeprecationWarning', # https://github.com/dateutil/dateutil/pull/1285
]

[tool.coverage.run]
omit = [
  "amical/externals/*",
]

[tool.coverage.report]
omit = [
  "amical/externals/*",
  "amical/dpfit.py",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
show_error_context = true
show_error_codes = true
