[metadata]
name = amical
version = 1.2
long_description = file: README.md
long_description_content_type = text/markdown
author = Anthony Soulain
author_email = anthony.soulain@sydney.edu.au.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Professional Astronomers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: High Angular Resolution Astronomy :: Interferometry

[options]
packages = find:
install_requires =
    astropy
    astroquery
    corner
    emcee
    h5py
    matplotlib
    munch
    numpy
    scipy
    termcolor
    tqdm
    uncertainties
python_requires = >=3.7

[options.extras_require]
dev =
    pytest

[options.package_data]
amical =
    internal_data/*.fits

[flake8]
exclude = *__init__.py, amical/externals/*
ignore = E203, E501, W503
