[metadata]
name = amical
version = 1.5.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SydneyAstrophotonicInstrumentationLab/AMICAL
author = Anthony Soulain
author_email = anthony.soulain@sydney.edu.au.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: AIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Astronomy
    Typing :: Typed

[options]
packages = find:
install_requires =
    PyPDF2
    astropy
    astroquery
    corner
    emcee
    h5py
    matplotlib
    munch
    numpy
    packaging>=21.0
    scipy
    tabulate
    termcolor
    tqdm
    uncertainties
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    doc*

[options.entry_points]
console_scripts =
    amical=amical._cli.main:main

[options.extras_require]
dev =
    pytest
    pytest-cov
typecheck =
    mypy==0.931
    types-setuptools~=57.4
    types-tabulate==0.8.5
    types-termcolor~=1.1

[options.package_data]
amical =
    internal_data/*.fits
    py.typed

[flake8]
exclude = *__init__.py, amical/externals/*
ignore =
    E203,
    E501,
    W503,
